--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Charon",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Share shortcuts for your favorite websites!",
   "icons": {
     "16": "img/canoe-16.png",
@@ -16,8 +16,15 @@
     "default_popup": "index.html"
   },
   "background": {
-    "service_worker": "background.js",
+    "scripts": [
+      "background.js"
+    ],
     "type": "module"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{6fd597f6-33d7-46be-852e-6a4f16d8dd06}"
+    }
   },
   "omnibox": {
     "keyword": "c"
