--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -2,7 +2,8 @@
   "manifest_version": 3,
   "name": "Charon",
   "version": "0.2.0",
-  "description": "Share shortcuts for your favorite websites!",
+  "description": "My omnibox extension implementation.",
+  "homepage_url": "https://github.com/carlbernal/charon",
   "icons": {
     "16": "img/canoe-16.png",
     "32": "img/canoe-32.png",
