--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Charon",
-  "version": "0.1.0",
-  "description": "Share shortcuts for your favorite websites!",
+  "version": "0.2.0",
+  "description": "Carlbernal's omnibox extension implementation.",
+  "homepage_url": "https://github.com/carlbernal/charon",
   "icons": {
     "16": "img/canoe-16.png",
     "32": "img/canoe-32.png",
@@ -16,15 +17,8 @@
     "default_popup": "index.html"
   },
   "background": {
-    "scripts": [
-      "background.js"
-    ],
+    "service_worker": "background.js",
     "type": "module"
-  },
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "{6fd597f6-33d7-46be-852e-6a4f16d8dd06}"
-    }
   },
   "omnibox": {
     "keyword": "c"
